# faster-kpf-bert-ner

./: .gitignore  LICENSE  README.md  config.py  label.py  ner_module.py  pyproject.toml  utils.py
faster_kpf_ber_ner/: ner_module.py  utils.py
faster_kpf_bert_ner/: ner_module.py
tests/: test_performance.py
