[tool.poetry]
name = "faster-kpf-bert-ner"
version = "0.1.0"
description = ""
authors = ["Yangwook Jeong <yangwookee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2.2"
transformers = "^4.45.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
