[tool.poetry]
name = "faster-kpf-bert-ner"
version = "0.1.0"
description = ""
authors = ["Yangwook Jeong <yangwookee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
transformers = "^4.45.2"
tqdm = "^4.66.5"
numpy = ">=2.1.0,<3.0.0"
kss = "^6.0.4"
python-mecab-ko = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
taskipy = "^1.13.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test-perf = "pytest --benchmark-only"
