[tool.poetry]
name = "faster-kpf-bert-ner"
version = "0.1.0"
description = ""
authors = ["Yangwook Jeong <yangwookee@gmail.com>"]
readme = "README.md"
packages = [
  { include = "faster_kpf_bert_ner", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.45.2"
tqdm = "^4.66.5"
kss = "^6.0.4"
python-mecab-ko = "^1.3.7"
numpy = "^1.26.4"
torch = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
taskipy = "^1.13.0"
pytest-benchmark = "^4.0.0"
icecream = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test-perf = "pytest --benchmark-only"
